added person add

--- a/src/main/front-end/src/app/app.component.html
+++ b/src/main/front-end/src/app/app.component.html
@@ -8,6 +8,7 @@
     <button class="btn-primary" routerLink="/dashboard">Dashboard</button>
     <button class="btn-primary" routerLink="/tasks">Tasks</button>
     <button class="btn-primary" routerLink="/addTask">Add Task</button>
+    <button class="btn-primary" routerLink="/person">Add Person</button>
   </div>
   &nbsp;
 </div>
