added CATEGORY ADD

--- a/src/main/front-end/src/app/app.component.html
+++ b/src/main/front-end/src/app/app.component.html
@@ -9,6 +9,7 @@
     <button class="btn-primary" routerLink="/tasks">Tasks</button>
     <button class="btn-primary" routerLink="/addTask">Add Task</button>
     <button class="btn-primary" routerLink="/person">Add Person</button>
+    <button class="btn-primary" routerLink="/category">Add Category</button>
   </div>
   &nbsp;
 </div>
